--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,33 @@ services:
     ports:
       - 9000:9000
 
+#  zookeeper:
+#    image: confluentinc/cp-zookeeper:latest
+#    container_name: zookeeper
+#    environment:
+#      ZOOKEEPER_CLIENT_PORT: 2181
+#    ports:
+#      - "2181:2181"
+#    networks:
+#      - kafka-net
+#  kafka:
+#    image: confluentinc/cp-kafka:latest
+#    depends_on:
+#      - zookeeper
+#    container_name: kafka
+#    ports:
+##      - "9092:9092"
+#      - "29092:29092"
+#    environment:
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:29092
+##      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9093
+##      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+##      KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9093
+##      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+##      KAFKA_CREATE_TOPICS: "baeldung:1:1"
+#    networks:
+#      - kafka-net
+#networks:
+#  kafka-net:
+#    driver: bridge
